# UFEDLib_py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/ufedlib_py/metadata/: __init__.py
